--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hunter Seguro - Políticas de Privacidad</title>
+    <title>Alerta Hunter - Políticas de Privacidad</title>
 </head>
 
 <body>
 
     <h2>SECCIÓN 1 - ¿QUÉ HACEMOS CON TU INFORMACIÓN?</h2>
     <p>
-        El objetivo primordial del aplicativo Hunter Seguro es brindar la ayuda correspondiente al ciudadano que pueda
+        El objetivo primordial del aplicativo Alerta Hunter es brindar la ayuda correspondiente al ciudadano que pueda
         estar sufriendo algun incidente cotidiano o de seguridad,
         para esto el ciudadano enviará una alerta a la central de seguridad del distrito, esta alerta contiene el tipo
         de incidencia que esta ocurriendo, los datos básicos de la persona brindados en su registro
@@ -38,10 +38,10 @@
         Podemos divulgar tu información personal si se nos requiere por ley o si violas nuestros Términos de Servicio.
     </p>
 
-    <h2>SECCIÓN 4 - HUNTER SEGURO</h2>
+    <h2>SECCIÓN 4 - ALERTA HUNTER</h2>
 
     <p>
-        Tus datos se almacenan a través del almacenamiento de datos de HunterSeguro, bases de datos y la aplicación general de HunterSeguro. Tus datos se almacenan en un servidor seguro detrás de un firewall.
+        Tus datos se almacenan a través del almacenamiento de datos de Alerta Hunter, bases de datos y la aplicación general de Alerta Hunter Tus datos se almacenan en un servidor seguro detrás de un firewall.
     </p>
 
     <h2>SECCIÓN 6 - EDAD DE CONSENTIMIENTO</h2>
